--- a/international.html
+++ b/international.html
@@ -206,53 +206,276 @@
                 <section class="section-inside">
                   <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
-                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <li><a href="schedules.html">&larr; Schedules & Location</a></li>
+                    </ul>
+                    <hr class="work-hr">
+                  </div>
                   </div>
                   <div class="section-inside-picture start-picture">
                   </div>
 
+
                 <div class="section-inside-content">
 
-                  <h1>Schedules and Locations</h1>
+                  <h1>International</h1>
+                  <br><br>
 
-<br><br>
-  <h6>United States</h6>
-<!-- <p align="center"> -->
-<p class="u-center-text">
-<map name="FPMap0">
+                  <!-- <h6>Using Dreams and Imagery to Develop Your Life</h6> -->
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>Code</th>
+                      <th>Module</th>
+                      <th>Description</th>
+                    </tr>
 
-<area href="northeast.html" shape="polygon" coords="354, 68, 367, 52, 393, 40, 428, 20, 446, 25, 445, 44, 431, 62, 396, 105, 348, 105, 357, 84">
+                    <tr>
+                      <td>LC</td>
+                      <td> <a href="" class="page-link">Life Context</a></td>
+                      <td>Part One - No Prerequisites</td>
+                    </tr>
 
-<area href="southeast.html" shape="polygon" coords="217, 104, 218, 140, 198, 144, 235, 196, 289, 192, 338, 164, 351, 197, 366, 198, 355, 156, 394, 108, 345, 106">
+                    <tr>
+                      <td>DC</td>
+                      <td> <a href="" class="page-link">Depth Contact</a></td>
+                      <td>Part Two - Prerequisite - Life Context</td>
+                    </tr>
 
-<area href="midwest.html" coords="208, 10, 210, 73, 219, 75, 219, 103, 344, 107, 350, 88, 357, 85, 356, 68, 353, 12" shape="polygon">
+                    <tr>
+                      <td>LE</td>
+                      <td> <a href="" class="page-link">Life Experience</a></td>
+                      <td>Combines Parts One and Two - No Prerequisites</td>
+                    </tr>
 
-<area href="west.html" shape="polygon" coords="5, 5, 205, 7, 205, 61, 212, 70, 216, 88, 212, 89, 213, 140, 193, 140, 142, 200, 7, 152">
+                    <tr>
+                      <td>LI</td>
+                      <td> <a href="" class="page-link">Life Integration</a></td>
+                      <td>Part Three - Prerequisites - Either LC and DC or LE</td>
+                    </tr>
+
+                    <tr>
+                      <td>LS</td>
+                      <td> <a href="" class="page-link">Life Study</a></td>
+                      <td>Learning from another's life - Prerequisite - Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>SEM</td>
+                      <td> <a href="" class="page-link">Seminar</a></td>
+                      <td>Learn the theories behind the Intensive Journal- Prerequisites-Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>PRE</td>
+                      <td> <a href="" class="page-link">Intro Course</a></td>
+                      <td>Experience a sampling of Intensive Journal exercises - Prerequisite - None</td>
+                    </tr>
+
+                  </table>
+                  <br><br>
+
+                  <p>
+                    Click on the <strong>city name</strong> to see details of that workshop.
+                  </p>
 
 
-</map>
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>Country</th>
+                      <th>City</th>
+                      <th>Module</th>
+                      <th>Begins</th>
+                      <th>Ends</th>
+                      <th>Language</th>
+                      <th>Telephone</th>
+                      <th>Leader</th>
+                    </tr>
+
+                    <tr>
+                      <td>Australia</td>
+                      <td> <a href="australia.html" class="page-link">North Sydney, NSW</a></td>
+                      <td>LC</td>
+                      <td>16 Nov 19</td>
+                      <td>17 Nov 19</td>
+                      <td>English</td>
+                      <td>(04) 2521 1065</td>
+                      <td>Kate Scholl</td>
+                    </tr>
+
+                    <tr>
+                      <td>Australia</td>
+                      <td> <a href="australia.html" class="page-link">Brisbane, QLD</a></td>
+                      <td>DC</td>
+                      <td>5 July 19</td>
+                      <td>6 July 19</td>
+                      <td>English</td>
+                      <td>(04) 2521 1065</td>
+                      <td>Kate Scholl</td>
+                    </tr>
 
 
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12)" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460">
-<!--
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12) info/Midwest.htm" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460"> -->
 
-</p>
 
-<!-- <br><br><br> -->
-<br>
-<h6>Canada</h6>
-<br>
-<p class="u-center-text">
-	<a href="canada.html"><img src="img/canada.jpg" height="140" width="189"></a>
-</p>
-<br><br>
+                    <tr>
+                      <td>France</td>
+                      <td> <a href="france.html" class="page-link">Grenoble</a></td>
+                      <td>LC</td>
+                      <td>07 June 19</td>
+                      <td>08 June 19</td>
+                      <td>French</td>
+                      <td>33 6 77 89 65 83 or isabelle.galli@grenoble-em.com</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
 
-<h6>International</h6>
-<br>
-<p class="u-center-text">
-	<a href="international.html"><img src="img/worldMap.jpg" height="178" width="339"></a>
-</p>
+                    <tr>
+                      <td>France</td>
+                      <td> <a href="france.html" class="page-link">Grenoble</a></td>
+                      <td>DC</td>
+                      <td>09 June 19</td>
+                      <td>10 June 19</td>
+                      <td>French</td>
+                      <td>33 6 77 89 65 83 or isabelle.galli@grenoble-em.com</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+
+                    <tr>
+                      <td>Germany</td>
+                      <td> <a href="germany.html" class="page-link">Berlin</a></td>
+                      <td>LC</td>
+                      <td>TBA</td>
+                      <td>TBA</td>
+                      <td>German</td>
+                      <td>post@praxis-karinschwarze.de</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+                    <tr>
+                      <td>Germany</td>
+                      <td> <a href="germany.html" class="page-link">Berlin</a></td>
+                      <td>DC</td>
+                      <td>TBA</td>
+                      <td>TBA</td>
+                      <td>German</td>
+                      <td>post@praxis-karinschwarze.de</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+                    <tr>
+                      <td>Germany</td>
+                      <td> <a href="germany.html" class="page-link">Fraueninsel</a></td>
+                      <td>LC</td>
+                      <td>19 June 19</td>
+                      <td>20 June 19</td>
+                      <td>German</td>
+                      <td>seminar.abtei@t-online.de</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+                    <tr>
+                      <td>Germany</td>
+                      <td> <a href="germany.html" class="page-link">Fraueninsel</a></td>
+                      <td>DC</td>
+                      <td>21 June 19</td>
+                      <td>22 June 19</td>
+                      <td>German</td>
+                      <td>seminar.abtei@t-online.de</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+
+
+                    <tr>
+                      <td>Italy</td>
+                      <td> <a href="italy.html" class="page-link">&nbsp;</a></td>
+                      <td>LC</td>
+                      <td>&nbsp;</td>
+                      <td>&nbsp;</td>
+                      <td>Italian</td>
+                      <td>&nbsp;</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+                    <tr>
+                      <td>Luxembourg</td>
+                      <td> <a href="luxembourg.html" class="page-link">Luxembourg</a></td>
+                      <td>LC</td>
+                      <td>30 May 19</td>
+                      <td>31 May 19</td>
+                      <td>French</td>
+                      <td>352 27 99 88 80 / info@well-being.lu</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+                    <tr>
+                      <td>Luxembourg</td>
+                      <td> <a href="luxembourg.html" class="page-link">Luxembourg</a></td>
+                      <td>DC</td>
+                      <td>01 Jun 19</td>
+                      <td>02 Jun 19</td>
+                      <td>French</td>
+                      <td>352 27 99 88 80 / info@well-being.lu</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+                    <tr>
+                      <td>Morocco</td>
+                      <td> <a href="morocco.html" class="page-link">Casablanca</a></td>
+                      <td>LC</td>
+                      <td>15 Nov 19</td>
+                      <td>16 Nov 19</td>
+                      <td>French</td>
+                      <td>+212/22/36.57.26</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+                    <tr>
+                      <td>Morocco</td>
+                      <td> <a href="morocco.html" class="page-link">Casablanca</a></td>
+                      <td>DC</td>
+                      <td>17 Nov 19</td>
+                      <td>18 Nov 19</td>
+                      <td>French</td>
+                      <td>+212/22/36.57.26</td>
+                      <td>Heidemarie Graul-Bellali</td>
+                    </tr>
+
+                    <tr>
+                      <td>United Kingdom</td>
+                      <td> <a href="uk.html" class="page-link">London suburb - south</a></td>
+                      <td>LC</td>
+                      <td>11 Oct 20</td>
+                      <td>12 Oct 20</td>
+                      <td>English</td>
+                      <td>Dialogue House / 001-216-342-5170 / info@intensivejournal.org</td>
+                      <td>Joanne Hackett Ching</td>
+                    </tr>
+                    <tr>
+                      <td>United Kingdom</td>
+                      <td> <a href="uk.html" class="page-link">London suburb - south</a></td>
+                      <td>DC</td>
+                      <td>13 Oct 20</td>
+                      <td>14 Oct 20</td>
+                      <td>English</td>
+                      <td>Dialogue House / 001-216-342-5170 / info@intensivejournal.org</td>
+                      <td>Joanne Hackett Ching</td>
+                    </tr>
+                    <tr>
+                      <td>United Kingdom</td>
+                      <td> <a href="uk.html" class="page-link">London suburb - south</a></td>
+                      <td>LI</td>
+                      <td>15 Oct 20</td>
+                      <td>16 Oct 20</td>
+                      <td>English</td>
+                      <td>Dialogue House / 001-216-342-5170 / info@intensivejournal.org</td>
+                      <td>Joanne Hackett Ching</td>
+                    </tr>
+
+
+                  </table>
+
+                    <!-- <hr class="trademark-line u-margin-top-small"> -->
+
 
                 </div>
 
