--- a/northeast.html
+++ b/northeast.html
@@ -461,7 +461,7 @@
 
                     <tr>
                       <td>New York / Quebec</td>
-                      <td> <a href="northeastcanada.html" class="page-link">Montreal</a></td>
+                      <td> <a href="canadaprov.html" class="page-link">Montreal</a></td>
                       <td>LC</td>
                       <td>TBA</td>
                       <td>TBA</td>
@@ -472,7 +472,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>LC</td>
                       <td>08/16/20</td>
                       <td>08/17/20</td>
@@ -483,7 +483,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>DC</td>
                       <td>08/18/20</td>
                       <td>08/19/20</td>
@@ -494,7 +494,7 @@
 
                     <tr>
                       <td>New York / Ontario</td>
-                      <td> <a href="northeastcanada.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
                       <td>LI</td>
                       <td>08/20/20</td>
                       <td>08/21/20</td>
