--- a/australia.html
+++ b/australia.html
@@ -206,53 +206,122 @@
                 <section class="section-inside">
                   <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
-                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <!-- <span class="vert">&vert;</span> -->
+                      <li><a href="international.html">&larr; International</a></li>
+                      <!-- <span class="vert">&vert;</span> -->
+                    </ul>
+                    <hr class="work-hr">
                   </div>
+                  </div>
+
+
+
                   <div class="section-inside-picture start-picture">
                   </div>
 
                 <div class="section-inside-content">
 
-                  <h1>Schedules and Locations</h1>
+                  <h1>Intensive Journal Workshops - Australia</h1>
+                  <!-- <br><br> -->
+                  <h6>2019</h6>
 
-<br><br>
-  <h6>United States</h6>
-<!-- <p align="center"> -->
-<p class="u-center-text">
-<map name="FPMap0">
+                  <h5>North Sydney, NSW:  Life Context (Part 1) Workshop on 16-17 November 2019</h5>
 
-<area href="northeast.html" shape="polygon" coords="354, 68, 367, 52, 393, 40, 428, 20, 446, 25, 445, 44, 431, 62, 396, 105, 348, 105, 357, 84">
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Workshop (12 hrs)</th>
+                                        <th>Schedule</th>
+                                        <th>Cost</th>
+                                      </tr>
 
-<area href="southeast.html" shape="polygon" coords="217, 104, 218, 140, 198, 144, 235, 196, 289, 192, 338, 164, 351, 197, 366, 198, 355, 156, 394, 108, 345, 106">
+                                      <tr>
+                                        <td>Life Context</td>
+                                        <td>16 Feb 19 (9:30 am-5 pm) <br>17 Feb 19 (9:30 am-4:30 pm)</td>
+                                        <td>$160*</td>
+                                      </tr>
 
-<area href="midwest.html" coords="208, 10, 210, 73, 219, 75, 219, 103, 344, 107, 350, 88, 357, 85, 356, 68, 353, 12" shape="polygon">
+                                    </table>
+                                    <!-- <br><br> -->
+                                    <p>
 
-<area href="west.html" shape="polygon" coords="5, 5, 205, 7, 205, 61, 212, 70, 216, 88, 212, 89, 213, 140, 193, 140, 142, 200, 7, 152">
+                                    * Morning and afternoon teas are provided each day. <br>
+                                    Please bring your lunch, a pen and 3 ring binder.  Paper and Intensive Journal dividers will be provided. <br>
+                                    <strong>Bookings essential by 9 November. </strong> <br>
+                                  $20 discount for early bird bookings by 20 October and discount for Eremos members.
+                                    </p>
+                    <table class="table-credits table-praises">
+                      <tr>
+                        <th>Location
+                         </th>
+                        <td>
+                        The workshop is sponsored by the Erermos Institute and will be held at the <strong>Grail, 22 McHatton Street, North Sydney</strong>.  Street parking available.
+                         </td>
+                      </tr>
+                      <tr>
+                        <th>Leader</th>
+                        <td>
+                          <strong>Kate Scholl</strong> has led Intensive Journal workshops for 35 years. She is an experienced workshop and retreat facilitator, and currently works for the St Vincent de Paul Society (NSW) in Member and Volunteer Development.</td>
+                      </tr>
+                      <tr>
+                        <th>Registration</th>
+                        <td>Bookings essential by 9 November. Space is strictly limited so please book early.  More details and registration link are on the Eremos website: <a href="https://www.eremos.org.au/index.cfm?module=event&pagemode=indiv&page_id=888101" class="page-link"> Intensive Journal NOV 2019</a> <br>
+                        <br>Postal address for cheques:  Eremos Institute, c/o Pitt Street Uniting Church, 264 Pitt St, Sydney NSW 2000.  Credit cards accepted for online bookings only. <br>
+                      <br>For more information about the Intensive Journal program, contact Kate at events@eremos.org.au or tel 0425 211 065</td>
+                      </tr>
+                    </table>
+
+                    <br><br><br>
 
 
-</map>
+                    <h5>Brisbane, QLD:  Depth Contact (Part 2) Workshop on 5 - 6 July 2019</h5>
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Workshop (12 hrs)</th>
+                                        <th>Schedule</th>
+                                        <th>Cost</th>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Depth Contact</td>
+                                        <td>FRI 5 July 19 (9:30 am-5 pm)<br>SAT 6 July 19 (9:30 am-4:30 pm)</td>
+                                        <td>$160*</td>
+                                      </tr>
 
 
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12)" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460">
-<!--
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12) info/Midwest.htm" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460"> -->
+                                    </table>
+                                    <!-- <br><br> -->
+                                    <p>
 
-</p>
+                                    <sup>*</sup>Lunch is not included. Restaurants and lodging nearby. Please bring a pen and notebook.
+                                    <br>
+                                    $140 for Eremos members.
+                                    </p>
+                    <table class="table-credits table-praises">
+                      <tr>
+                        <th>Location
+                         </th>
+                        <td>
+The workshop will be held at <strong>the Centre for Practical Spirituality</strong>, 52 Merthyr Road, New Farm Queensland.   More details <a href="https://www.eremos.org.au/index.cfm?module=event&pagemode=indiv&page_id=849869" class="page-link">Brisbane Depth Contact Workshop 5-6 July</a>
+                         </td>
+                      </tr>
+                      <tr>
+                        <th>Leader</th>
+                        <td>
+                          <strong> Kate Scholl  </strong>has led Intensive Journal workshops for 35 years. She is an experienced workshop and retreat facilitator, and currently works for the St Vincent de Paul Society (NSW) in Member and volunteer Development.</td>
+                      </tr>
+                      <tr>
+                        <th>Registration</th>
+                        <td>Mail:   Centre for Practical Spirituality, 52 Merthyr Road, New Farm QLD 4005.   Credit cards accepted for online bookings.  To register online, follow this link <a href="https://www.trybooking.com/book/event?eid=489464&" class="page-link">Depth Contact Registration</a>  Questions?  Phone 07-3358-69475. <br><br>
+                          For more information about the Intensive Journal program, contact Kate at events@eremos.org.au or tel 0425 211 065
+                        </td>
+                      </tr>
+                    </table>
 
-<!-- <br><br><br> -->
-<br>
-<h6>Canada</h6>
-<br>
-<p class="u-center-text">
-	<a href="canada.html"><img src="img/canada.jpg" height="140" width="189"></a>
-</p>
-<br><br>
-
-<h6>International</h6>
-<br>
-<p class="u-center-text">
-	<a href="international.html"><img src="img/worldMap.jpg" height="178" width="339"></a>
-</p>
+                  
 
                 </div>
 
