--- a/canada.html
+++ b/canada.html
@@ -206,53 +206,208 @@
                 <section class="section-inside">
                   <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
-                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <li><a href="schedules.html">&larr; Schedules & Location</a></li>
+                    </ul>
+                    <hr class="work-hr">
+                  </div>
                   </div>
                   <div class="section-inside-picture start-picture">
                   </div>
 
+
                 <div class="section-inside-content">
 
-                  <h1>Schedules and Locations</h1>
+                  <h1>Canada</h1>
+                  <br><br>
+                  
+                  <!-- <h6>Using Dreams and Imagery to Develop Your Life</h6> -->
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>Code</th>
+                      <th>Module</th>
+                      <th>Description</th>
+                    </tr>
 
-<br><br>
-  <h6>United States</h6>
-<!-- <p align="center"> -->
-<p class="u-center-text">
-<map name="FPMap0">
+                    <tr>
+                      <td>LC</td>
+                      <td> <a href="" class="page-link">Life Context</a></td>
+                      <td>Part One - No Prerequisites</td>
+                    </tr>
 
-<area href="northeast.html" shape="polygon" coords="354, 68, 367, 52, 393, 40, 428, 20, 446, 25, 445, 44, 431, 62, 396, 105, 348, 105, 357, 84">
+                    <tr>
+                      <td>DC</td>
+                      <td> <a href="" class="page-link">Depth Contact</a></td>
+                      <td>Part Two - Prerequisite - Life Context</td>
+                    </tr>
 
-<area href="southeast.html" shape="polygon" coords="217, 104, 218, 140, 198, 144, 235, 196, 289, 192, 338, 164, 351, 197, 366, 198, 355, 156, 394, 108, 345, 106">
+                    <tr>
+                      <td>LE</td>
+                      <td> <a href="" class="page-link">Life Experience</a></td>
+                      <td>Combines Parts One and Two - No Prerequisites</td>
+                    </tr>
 
-<area href="midwest.html" coords="208, 10, 210, 73, 219, 75, 219, 103, 344, 107, 350, 88, 357, 85, 356, 68, 353, 12" shape="polygon">
+                    <tr>
+                      <td>LI</td>
+                      <td> <a href="" class="page-link">Life Integration</a></td>
+                      <td>Part Three - Prerequisites - Either LC and DC or LE</td>
+                    </tr>
 
-<area href="west.html" shape="polygon" coords="5, 5, 205, 7, 205, 61, 212, 70, 216, 88, 212, 89, 213, 140, 193, 140, 142, 200, 7, 152">
+                    <tr>
+                      <td>LS</td>
+                      <td> <a href="" class="page-link">Life Study</a></td>
+                      <td>Learning from another's life - Prerequisite - Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>SEM</td>
+                      <td> <a href="" class="page-link">Seminar</a></td>
+                      <td>Learn the theories behind the Intensive Journal- Prerequisites-Life Context</td>
+                    </tr>
+
+                    <tr>
+                      <td>PRE</td>
+                      <td> <a href="" class="page-link">Intro Course</a></td>
+                      <td>Experience a sampling of Intensive Journal exercises - Prerequisite - None</td>
+                    </tr>
+
+                  </table>
+                  <br><br>
+
+                  <p>
+                    Click on the <strong>city name</strong> to see details of that workshop.
+                  </p>
 
 
-</map>
+                  <table class="table-credits table-praises table-schedules">
+                    <tr>
+                      <th>Province</th>
+                      <th>City</th>
+                      <th>Module</th>
+                      <th>Begins</th>
+                      <th>Ends</th>
+                      <th>Sponsor</th>
+                      <th>Telephone</th>
+                      <th>Leader</th>
+                    </tr>
+
+                    <tr>
+                      <td>British Columbia</td>
+                      <td> <a href="canadaprov.html" class="page-link">Victoria</a></td>
+                      <td>LC</td>
+                      <td>03/06/20</td>
+                      <td>03/07/20</td>
+                      <td>Centre for Earth & Spirit Society</td>
+                      <td>250-744-0590</td>
+                      <td>Bill Israel</td>
+                    </tr>
+                    <tr>
+                      <td>British Columbia</td>
+                      <td> <a href="canadaprov.html" class="page-link">Victoria</a></td>
+                      <td>DC</td>
+                      <td>05/01/20</td>
+                      <td>05/02/20</td>
+                      <td>Centre for Earth & Spirit Society</td>
+                      <td>250-744-0590</td>
+                      <td>Bill Israel</td>
+                    </tr>
+                    <tr>
+                      <td>British Columbia</td>
+                      <td> <a href="canadaprov.html" class="page-link">Victoria</a></td>
+                      <td>LC</td>
+                      <td>09/18/20</td>
+                      <td>09/19/20</td>
+                      <td>Centre for Earth & Spirit Society</td>
+                      <td>250-744-0590</td>
+                      <td>Bill Israel</td>
+                    </tr>
 
 
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12)" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460">
-<!--
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12) info/Midwest.htm" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460"> -->
+                    <tr>
+                      <td>Manitoba</td>
+                      <td> <a href="canadaprov.html" class="page-link">Winnipeg</a></td>
+                      <td>LC</td>
+                      <td>10/25/19</td>
+                      <td>10/27/19</td>
+                      <td>St. Benedict's Retreat and Conference Centre</td>
+                      <td>204-339-1705</td>
+                      <td>Virginia Evard</td>
+                    </tr>
+                    <tr>
+                      <td>Manitoba</td>
+                      <td> <a href="canadaprov.html" class="page-link">Winnipeg</a></td>
+                      <td>LC</td>
+                      <td>02/14/20</td>
+                      <td>02/15/20</td>
+                      <td>St. Benedict's Retreat and Conference Centre</td>
+                      <td>204-339-1705</td>
+                      <td>Virginia Evard</td>
+                    </tr>
+                    <tr>
+                      <td>Manitoba</td>
+                      <td> <a href="canadaprov.html" class="page-link">Winnipeg</a></td>
+                      <td>DC</td>
+                      <td>02/16/20</td>
+                      <td>02/17/20</td>
+                      <td>St. Benedict's Retreat and Conference Centre</td>
+                      <td>204-339-1705</td>
+                      <td>Virginia Evard</td>
+                    </tr>
 
-</p>
 
-<!-- <br><br><br> -->
-<br>
-<h6>Canada</h6>
-<br>
-<p class="u-center-text">
-	<a href="canada.html"><img src="img/canada.jpg" height="140" width="189"></a>
-</p>
-<br><br>
 
-<h6>International</h6>
-<br>
-<p class="u-center-text">
-	<a href="international.html"><img src="img/worldMap.jpg" height="178" width="339"></a>
-</p>
+                    <tr>
+                      <td>Ontario</td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td>LC</td>
+                      <td>08/16/20</td>
+                      <td>08/17/20</td>
+                      <td>D.H. at Queen of Apostles Renewal Centre</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+
+                    <tr>
+                      <td>Ontario</td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td>DC</td>
+                      <td>08/18/20</td>
+                      <td>08/19/20</td>
+                      <td>D.H. at Queen of Apostles Renewal Centre</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+
+                    <tr>
+                      <td>Ontario</td>
+                      <td> <a href="canadaprov.html" class="page-link">Toronto / Mississauga</a></td>
+                      <td>LI</td>
+                      <td>08/20/20</td>
+                      <td>08/21/20</td>
+                      <td>D.H. at Queen of Apostles Renewal Centre</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>Susan Wells</td>
+                    </tr>
+
+                    <tr>
+                      <td>Quebec</td>
+                      <td> <a href="canadaprov.html" class="page-link">Montreal</a></td>
+                      <td>LC</td>
+                      <td>TBA</td>
+                      <td>TBA</td>
+                      <td>DH at Centre St Pierre</td>
+                      <td>216-342-5170 / 800-221-5844</td>
+                      <td>TBA</td>
+                    </tr>
+
+
+                  </table>
+
+                    <!-- <hr class="trademark-line u-margin-top-small"> -->
+
 
                 </div>
 
