--- a/italy.html
+++ b/italy.html
@@ -206,53 +206,78 @@
                 <section class="section-inside">
                   <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
-                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <!-- <span class="vert">&vert;</span> -->
+                      <li><a href="international.html">&larr; International</a></li>
+                      <!-- <span class="vert">&vert;</span> -->
+                    </ul>
+                    <hr class="work-hr">
                   </div>
+                  </div>
+
+
+
                   <div class="section-inside-picture start-picture">
                   </div>
 
                 <div class="section-inside-content">
 
-                  <h1>Schedules and Locations</h1>
+                  <h1>Intensive Journal Workshops - Italy</h1>
+                  <!-- <br><br> -->
+                  <h6>2020 - To be Announced</h6>
 
-<br><br>
-  <h6>United States</h6>
-<!-- <p align="center"> -->
-<p class="u-center-text">
-<map name="FPMap0">
+                  <h5>City in Italy to be announced</h5>
 
-<area href="northeast.html" shape="polygon" coords="354, 68, 367, 52, 393, 40, 428, 20, 446, 25, 445, 44, 431, 62, 396, 105, 348, 105, 357, 84">
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Workshop (12 hrs)</th>
+                                        <th>Schedule</th>
+                                        <th>Cost (in Euros) # </th>
+                                      </tr>
 
-<area href="southeast.html" shape="polygon" coords="217, 104, 218, 140, 198, 144, 235, 196, 289, 192, 338, 164, 351, 197, 366, 198, 355, 156, 394, 108, 345, 106">
+                                      <tr>
+                                        <td>Life Context</td>
+                                        <td>TBA €</td>
+                                        <td>TBA €</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Depth Contact</td>
+                                      <td>TBA €</td>
+                                        <td>TBA €</td>
+                                      </tr>
+                                      <tr>
+                                        <td>Both</td>
+                                      <td>&nbsp;</td>
+                                        <td>TBA €</td>
+                                      </tr>
+                                    </table>
 
-<area href="midwest.html" coords="208, 10, 210, 73, 219, 75, 219, 103, 344, 107, 350, 88, 357, 85, 356, 68, 353, 12" shape="polygon">
 
-<area href="west.html" shape="polygon" coords="5, 5, 205, 7, 205, 61, 212, 70, 216, 88, 212, 89, 213, 140, 193, 140, 142, 200, 7, 152">
+                    <table class="table-credits table-praises">
+                      <tr>
+                        <th>Location
+                         </th>
+                        <td>
+                          TBA
+                         </td>
+                      </tr>
+                      <tr>
+                        <th>Leader</th>
+                        <td>
+                          <strong>Heidemarie Graul-Bellali</strong>has been giving Intensive Journal workshops since 1994 in various European countries, including Luxembourg, Germany, Belgium, Italy as well as in Morocco. She is currently working as a professional translator in Casablanca.</td>
+                      </tr>
+                      <tr>
+                        <th>Registration</th>
+                        <td>For program information in French, German or Italian
+                          <a href="http://www.intensivejournal.eu/" class="page-link">www.intensivejournal.eu</a>  </td>
+                      </tr>
+                    </table>
 
+                    <br>
 
-</map>
-
-
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12)" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460">
-<!--
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12) info/Midwest.htm" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460"> -->
-
-</p>
-
-<!-- <br><br><br> -->
-<br>
-<h6>Canada</h6>
-<br>
-<p class="u-center-text">
-	<a href="canada.html"><img src="img/canada.jpg" height="140" width="189"></a>
-</p>
-<br><br>
-
-<h6>International</h6>
-<br>
-<p class="u-center-text">
-	<a href="international.html"><img src="img/worldMap.jpg" height="178" width="339"></a>
-</p>
 
                 </div>
 
