--- a/uk.html
+++ b/uk.html
@@ -206,53 +206,204 @@
                 <section class="section-inside">
                   <div class="section-inside-header">
                     <h5 class="heading-five">General Workshops</h5>
-                    <h1 class="heading-one hr-overview">Schedules & Locations</h1>
+                    <!-- <h1 class="heading-one hr-overview">Schedules & Locations</h1> -->
+                    <div class="inside-nav-container">
+                      <hr class="work-hr">
+                    <ul class="inside-nav">
+                      <!-- <span class="vert">&vert;</span> -->
+                      <li><a href="international.html">&larr; International</a></li>
+                      <!-- <span class="vert">&vert;</span> -->
+                    </ul>
+                    <hr class="work-hr">
                   </div>
+                  </div>
+
+
+
                   <div class="section-inside-picture start-picture">
                   </div>
 
                 <div class="section-inside-content">
 
-                  <h1>Schedules and Locations</h1>
+                  <h1>Intensive Journal Workshops in United Kingdom and Ireland</h1>
 
-<br><br>
-  <h6>United States</h6>
-<!-- <p align="center"> -->
-<p class="u-center-text">
-<map name="FPMap0">
+                  <p>John Sweet is no longer an authorized representative of Dialogue House and the Intensive Journal program.   You cannot get an authorized Intensive Journal experience through him. </p>
+                  <!-- <h6>Fall, 2019 - Fall, 2020</h6> -->
 
-<area href="northeast.html" shape="polygon" coords="354, 68, 367, 52, 393, 40, 428, 20, 446, 25, 445, 44, 431, 62, 396, 105, 348, 105, 357, 84">
+                  <h5>London area-Battke, East Sussex, United Kingdom: 11-16 October 2020</h5>
 
-<area href="southeast.html" shape="polygon" coords="217, 104, 218, 140, 198, 144, 235, 196, 289, 192, 338, 164, 351, 197, 366, 198, 355, 156, 394, 108, 345, 106">
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Workshop (12 hrs)</th>
+                                        <th>Schedule</th>
+                                        <th>Commuters <sup>#</sup></th>
+                                        <th>Residents <sup>*</sup></th>
+                                      </tr>
 
-<area href="midwest.html" coords="208, 10, 210, 73, 219, 75, 219, 103, 344, 107, 350, 88, 357, 85, 356, 68, 353, 12" shape="polygon">
+                                      <tr>
+                                        <td>Life Context</td>
+                                        <td>11 Oct 20 (3-5:30 pm; 7:00-9:30 pm)<br>12 Oct 20 (9:30 am-12:30 pm; 2-6 pm)</td>
+                                        <td>£ 235 GBP</td>
+                                        <td>£ 295 GBP</td>
+                                      </tr>
 
-<area href="west.html" shape="polygon" coords="5, 5, 205, 7, 205, 61, 212, 70, 216, 88, 212, 89, 213, 140, 193, 140, 142, 200, 7, 152">
+                                      <tr>
+                                        <td>Depth Contact</td>
+                                        <td>13 Oct 20 (9:30 am-12:30 pm; 2-5 pm)<br>14 Oct 20 (9:30 am-12:30 pm; 2-5 pm)</td>
+                                        <td>£ 235  GBP</td>
+                                        <td>£ 355 GBP+</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Life Integration / Journal Feedback Process</td>
+                                        <td>15 Oct 20 (9:30 am-12:30 pm; 2-5 pm)<br>16 Oct 20 (9:30 am-12:30 pm; 2-5 pm)</td>
+                                        <td>£ 235  GBP</td>
+                                        <td>£ 355 GBP+</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Life Context and Depth Contact</td>
+                                        <td> <br> </td>
+                                        <td>£ 445  GBP</td>
+                                        <td>£ 615 GBP**++</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Depth Contact and Life Integration / Journal Feedback process </td>
+                                        <td> <br> </td>
+                                        <td>£ 445  GBP</td>
+                                        <td>£ 675 GBP**+++</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>All three workshops</td>
+                                        <td> <br> </td>
+                                        <td>£ 655  GBP</td>
+                                        <td>£ 895 GBP** @</td>
+                                      </tr>
+
+                                    </table>
+
+                                    # Includes tuition and 1 meal per day (in between sessions). <br>
+  *  Includes tuition, 3 meals per day and single bedroom (with private bath). <br>
+  ** Includes the cost of overnight accommodations and meals in between workshops. <br>
+  +  Includes tuition, 3 meals per day and single bedroom (with private bath) for 2 nights. <br>
+  ++  Includes tuition, 3 meals per day and single bedroom (with private bath) for 3 nights. <br>
+  +++  Includes tuition, 3 meals per day and single bedroom (with private bath) for 4 nights. <br>
+  @  Includes tuition, 3 meals per day and single bedroom (with private bath) for 5 nights.
+
+                                    </p>
+                    <table class="table-credits table-praises">
+                      <tr>
+                        <th>Location
+                         </th>
+                        <td>
+                          <strong>Ashburnham Place</strong>	 is a leading retreat and conference centre that is located south of London, 5 miles west of the town of Battle within the county of East Sussex. see www.ashburnham.org.uk.  The centre has spacious grounds (220 acres) with walking areas and ponds that provide a beautiful setting.  Our conference and lodging will be in the Patmos Lodge, a very quiet setting that is appropriate for our program. <br> <br>
+                          The centre is accessible by train from London; there is hourly service from Charing Cross and Waterloo East to Battle via Sevenoaks and Tonbridge.  The train station in Battle is 5 miles to the centre by taxi.  There is also hourly train service from Victoria to Bexhill via Chapham Junction,
+East Croydon, Gatwick and Eastbourne.  The Bexhill station is 7 miles from Ashburnham Place by taxi.
+                         </td>
+                      </tr>
+                      <tr>
+                        <th>Leader</th>
+                        <td>
+                          <strong>Joanne Hackett Ching</strong> began leading Intensive Journal workshops in 1980 while she was working at Dialogue House in NYC. For 25 years she was an English as a Second Language (ESL) teacher in Fresno, California. She has a MA in Creation Spirituality from Naropa University, is a Certified Life Cycle Celebrant® (creating celebrations for significant life events) and is an ordained minister with the Universal Life Church.</td>
+                      </tr>
+                      <tr>
+                        <th>Registration</th>
+                        <td>Contact Dialogue House (USA) at 001216-342-5170 or info@intensivejournal.org   Contact Dialogue House at 216-342-5170 or info@intensivejournal.org, 23400 Mercantile Road -Suite 2, Beachwood OH  44122.   USA.   FAX:   001-216-342-5168  Minimum nonrefundable deposit:  Commuters:  75 GBP;  Residents:  125 GBP.     Payment by credit card only. <br><br>
+                        No registration online; please call, mail, fax or email registration information (split information into multiple emails for security purposes).   Please note that many credit card companies charge a fee for a foreign transaction.  We need your name, address, phone, email, workshop modules that you are attending, whether you are a commuter or resident, and any dietary needs. <br><br>
+                      A confirmation letter with additional details will be sent by email about 10 days prior to the program. </td>
+                      </tr>
+                    </table>
+
+                    <br><br><br>
 
 
-</map>
+                    <h5>New Haven-Madison, CT: 3-Part Series on October 11-16, 2020 (Sunday-Friday) </h5>
+                                    <table class="table-credits table-praises">
+                                      <tr>
+                                        <th>Workshop (12 hrs)</th>
+                                        <th>Schedule</th>
+                                        <th>Commuters <sup>#</sup></th>
+                                        <th>Residents <sup>*</sup></th>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Life Context</td>
+                                        <td>10/11: (2-00-5:30 pm; 6:30-9 pm)<br>10/12: (9 am-12 pm; 2-5:30 pm)</td>
+                                        <td>$ 325</td>
+                                        <td>$ 395</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Depth Contact</td>
+                                        <td>10/13: (9 am-12 pm; 2-5 pm)<br>10/14: (9 am-12 pm; 2-5 pm)</td>
+                                        <td>$ 325</td>
+                                        <td>$ 395</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Life Integration</td>
+                                        <td>10/15: (9 am-12 pm; 2-5 pm)<br>10/16: (9 am-12 pm; 1:#0-4:#0 pm)</td>
+                                        <td>$ 325</td>
+                                        <td>$ 395</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Life Context & Depth Contact</td>
+                                        <td> <br> </td>
+                                        <td>$ 640</td>
+                                        <td>$ 885</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>Depth Contact & Life Integration</td>
+                                        <td> <br> </td>
+                                        <td>$ 640</td>
+                                        <td>$ 885</td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>All three workshops</td>
+                                        <td> <br> </td>
+                                        <td>$ 895</td>
+                                        <td>$1,345</td>
+                                      </tr>
+
+                                    </table>
+                                    <!-- <br><br> -->
+                                    <p>
+                                    <sup>#</sup>Tuition and 1 meal daily.<sup>*</sup>Includes tuition, single room, private bath, and meals.<br>
+                                <strong>Please register by September 24.  If your plans are uncertain call 800-221-5844.</strong>
+
+                                    </p>
+                    <table class="table-credits table-praises">
+                      <tr>
+                        <th>Location
+                         </th>
+                        <td>
+                          <strong>Mercy Center</strong> is located about 20 minutes east of New Haven, CT on Long Island Sound. This air-conditioned center has beautiful grounds and views, providing a conducive environment for your workshop experience. Mercy Center is accessible from I-95 and by train from New York or Boston. (See www.mercycenterbythesea.org)
+                         </td>
+                      </tr>
+                      <tr>
+                        <th>Leader</th>
+                        <td>
+                          <strong> Susan Wells </strong>has experience in the field of communications spanning 3 decades. She’s been a poet, video producer, radio drama director, researcher on a Peggy Guggenheim biography, teacher, editor, and, most recently, medical writer with a specialty in oncology and neurology. Susan has degrees in English, comparative literature, and anthropology from Columbia University and Middlebury College, and has worked with the Intensive Journal process for over 25 years.</td>
+                      </tr>
+                      <tr>
+                        <th>Registration</th>
+                        <td>Call <strong> 216-342-5170 or 800-221-5844 </strong> or write to <strong>Dialogue House</strong> , 23400 Mercantile Road, Suite 2, Beachwood, OH  44122.  Email: info@intensivejournal.org  Credit cards accepted. Make checks payable to Dialogue House. Minimum non-refundable deposit: commuters:  $50; residents:  $100</td>
+                      </tr>
+                    </table>
+
+                    <br><br><br>
 
 
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12)" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460">
-<!--
-<img polygon="(208,10) (210,73) (219,75) (219,103) (344,107) (350,88) (357,85) (356,68) (353,12) info/Midwest.htm" src="img/US_map.jpg" alt="US_map.jpg (14621 bytes)" usemap="#FPMap0" border="0" height="203" width="460"> -->
+                  <!-- <table class="table-credits table-praises table-schedules"> -->
 
-</p>
 
-<!-- <br><br><br> -->
-<br>
-<h6>Canada</h6>
-<br>
-<p class="u-center-text">
-	<a href="canada.html"><img src="img/canada.jpg" height="140" width="189"></a>
-</p>
-<br><br>
+                    <!-- <hr class="trademark-line u-margin-top-small"> -->
 
-<h6>International</h6>
-<br>
-<p class="u-center-text">
-	<a href="international.html"><img src="img/worldMap.jpg" height="178" width="339"></a>
-</p>
 
                 </div>
 
