--- a/index.html
+++ b/index.html
@@ -202,6 +202,21 @@
     </div>
             <div class="col-3-of-3">
                 <section class="section-content">
+                  <header>
+
+                    <div class="hero-text-box">
+                      <h1>
+                          Experience the method at our workshops - conducted throughout USA, Canada and overseas by certified leaders.<br>A 50 year track record of helping thousands!
+                      </h1>
+                      <a class="btan btan-full" href="#">Learn more</a>
+                      <a class="btan btan-ghost" href="#">Workshops</a>
+
+                      <!-- Created by Ira Progoff, PhD - a recognized pioneer in applying his unique approaches of human development to provide you with an amazing process to develop your life  -->
+                    </div>
+
+
+
+                  </header>
 
                 </section>
                 <section class="section-workshop">
