homepage almost finished

--- a/index.html
+++ b/index.html
@@ -205,13 +205,24 @@
                   <header>
 
                     <div class="hero-text-box">
+                      <!-- <h1>
+                          Experience the method at our workshops - conducted throughout USA, Canada and overseas by certified leaders.<br>
+                          <span class="tagline">A 50 year track record of helping thousands!</span>
+                      </h1> -->
                       <h1>
-                          Experience the method at our workshops - conducted throughout USA, Canada and overseas by certified leaders.<br>A 50 year track record of helping thousands!
+                          Experience the method at our workshops <br> conducted by certified leaders<br>
+                          held throughout USA, Canada and overseas <br>
+                          <span class="tagline">A 50 year track record of helping thousands!</span>
                       </h1>
                       <a class="btan btan-full" href="#">Learn more</a>
                       <a class="btan btan-ghost" href="#">Workshops</a>
 
-                      <!-- Created by Ira Progoff, PhD - a recognized pioneer in applying his unique approaches of human development to provide you with an amazing process to develop your life  -->
+                      <p class="tagline2">
+  Created by Ira Progoff, PhD - a recognized pioneer <br> in applying
+   his unique approaches of human development <br> to provide you with 
+    an amazing process to develop your life
+</p>
+
                     </div>
 
 
