Home Page Final

--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
                           Experience the method at our workshops - conducted throughout USA, Canada and overseas by certified leaders.<br>
                           <span class="tagline">A 50 year track record of helping thousands!</span>
                       </h1> -->
+                      <!-- <h1>
+                          Experience the method at our workshops <br> conducted by certified leaders<br>
+                          held throughout USA, Canada and overseas <br>
+                          <span class="tagline">A 50 year track record of helping thousands!</span>
+                      </h1> -->
                       <h1>
                           Experience the method at our workshops <br> conducted by certified leaders<br>
                           held throughout USA, Canada and overseas <br>
@@ -219,7 +224,7 @@
 
                       <p class="tagline2">
   Created by Ira Progoff, PhD - a recognized pioneer <br> in applying
-   his unique approaches of human development <br> to provide you with 
+   his unique approaches of human development <br> to provide you with
     an amazing process to develop your life
 </p>
 
