--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
       <div class="phone-nav">
       <input type="checkbox" class="phone-nav__checkbox" id="navi-toggle">
 
-      <label for="navi-toggle" class="phone-nav__button">MENU</label>
+      <label for="navi-toggle" class="phone-nav__button">
+          <span class="phone-nav__icon">&nbsp;</span>
+      </label>
+
+
 
       <!-- <div class="phone-nav__background">&nbsp;</div> -->
 
@@ -36,9 +40,11 @@
       <!-- <div class="phone-navigation"> -->
 
           <nav class="phone-nav__nav">
+
               <ul class="phone-nav__list">
+                <span class="header-phone"> <em>Intensive Journal</em> &nbsp;Program</span>
                 <li class="phone-nav__item">
-                    <a href="#" class="phone-nav__link"><em>Intensive Journal </em> Method</a>
+                    <a href="#" class="phone-nav__link"><em>Intensive Journal</em>&nbsp; Method</a>
                     <ul class="phone-nav__item--nested">
 
                         <li><a href="index.html">Home</a></li>
